docs(egl): record the working Redrawer and correct the EDT assumption
The doc told a future reader to keep EGL work off the EDT. That is backwards:
AWTRedrawer.inDrawScope asserts isEventDispatchThread(), so skiko renders on
the event thread and the EGL context must be current there -- which also
decides where mpv_render_context_render has to be called.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>